# pretty-snowflake-rs

./: .gitignore  Cargo.toml  README.md
benches/: basic.rs  bench_main.rs
benches/benchmarks/: basic.rs
pretty-snowflake-derive/: Cargo.toml
pretty-snowflake-derive/src/: lib.rs
src/: generator.rs  label.rs  labeling.rs  lib.rs  main.rs  pretty.rs  snowflake.rs  tests.rs
src/envelope/: envelope.rs  metadata.rs  mod.rs  serde_impl.rs
src/pretty/: codec.rs  damm.rs  id.rs  prettifier.rs  tests.rs
tests/: test_example.rs
