[package]
name = "pretty-snowflake"
version = "1.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["derive"]
derive = ["pretty-snowflake-derive"]

[dependencies]
rs-snowflake = "0.5.0"
itertools = "0.10.1"
once_cell = "1.8.0"
pretty-type-name = "1"
serde = { version = "1.0.130", features = ["derive"] }
tailcall = "0.1.6"
thiserror = "1.0.30"
validator = { version = "0.14.0", features = ["derive"] }
pretty-snowflake-derive = { path = "pretty-snowflake-derive", optional = true }

[dev-dependencies]
claim = "0.5.0"
criterion = { version = "0.3.5", features = ["html_reports"] }
pretty_assertions = "1.0.0"
pprof = { version = "0.6.1", features = ["flamegraph"] }
regex = "1.5.4"
rand = "0.8.4"
trim-margin = "*"
pretty-snowflake-derive = { path = "pretty-snowflake-derive" }
serde_test = "1.0"

[[bench]]
name = "bench_main"
harness = false