[package]
name = "pretty-snowflake"
version = "1.3.8"
description = """\
Rust port of SoftwareMill/scala-id-generator. Generate unique ids. A default generator is provided,\
based on Twitter Snowflake, which generates time-based ids. Besides that library provide \
IdPrettifier which may convert i64 into user-friendly Id type that can be coerced into an i64 for
systematic usage and storage and as a human-readable string, such as HPJD-72036-HAPK-58077. \
IdPrettifier preserves the id's monotonicity, provides checksum and produces id with constant \
length (if it's not configured otherwise). It also maybe configured to user custom part sizes, \
separator or don't use leading zeros to provide fixed length.\
"""
edition = "2021"
repository = "https://github.com/dmrolfs/pretty-snowflake-rs"
readme = "README.md"
license = "MIT"
keywords = ["id", "snowflake", "uid", "distruted-id", "twitter"]
categories = ["Algorithms", "Data structures", "Development tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["derive"]
derive = ["pretty-snowflake-derive"]

[dependencies]
rs-snowflake = "0.5.0"
itertools = "0.10.3"
once_cell = "1.9.0"
pretty-type-name = "1.0.0"
serde = { version = "1.0.133", features = ["derive"] }
tailcall = "0.1.6"
thiserror = "1.0.30"
validator = { version = "0.14.0", features = ["derive"] }
pretty-snowflake-derive = { path = "pretty-snowflake-derive", optional = true }

[dev-dependencies]
claim = "0.5.0"
criterion = { version = "0.3.5", features = ["html_reports"] }
pretty_assertions = "1.0.0"
pprof = { version = "0.6.2", features = ["flamegraph"] }
regex = "1.5.4"
rand = "0.8.4"
trim-margin = "0.1.0"
pretty-snowflake-derive = { path = "pretty-snowflake-derive" }
serde_test = "1.0.133"

[[bench]]
name = "bench_main"
harness = false
